iceberg/iceberg-handler/src/test/queries/negative/iceberg_default_column_type_mismatch.q
CREATE TABLE t3 (
  id INT,
  age INT DEFAULT 'twenty five'
)
STORED BY ICEBERG
TBLPROPERTIES ('format-version'='3');